# SlicerCADSWholeBodyCTSeg

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_DATA  LICENSE_MODEL  README.md
CADS/: CADS.py
CADS/Resources/: SegmentationCategoryTypeModifier-CADS.term.json
CADS/Resources/UI/: CADS.ui
CADSWholeBodyCTSeg/: CADSWholeBodyCTSeg.py  CMakeLists.txt
CADSWholeBodyCTSeg/Resources/: SegmentationCategoryTypeModifier-CADS.term.json  cads_snomed_mapping.csv
CADSWholeBodyCTSeg/Resources/UI/: CADSWholeBodyCTSeg.ui
OMASeg/: OMASeg.py
OMASeg/Resources/: SegmentationCategoryTypeModifier-OMASeg.term.json  omaseg_snomed_mapping.csv
OMASeg/Resources/UI/: OMASeg.ui
TotalSegmentator/: CMakeLists.txt
TotalSegmentator/Resources/UI/: OMASeg.ui
